<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_StarterControlData" Id="{d604e1a7-80dd-0a20-2f53-393f5fd94ae0}">
    <Declaration><![CDATA[{attribute 'pack_mode' := '1'}
TYPE ST_StarterControlData:
	STRUCT
		MotorCW           			: BIT; 		//0  
		MotorCCW	      			: BIT; 		//1  
		BrakeActuation				: BIT; 		//2  
		TripReset          			: BIT; 		//3  
		EmergStart        			: BIT; 		//4  
		SelfTest	      			: BIT; 		//5  
		Reserve06          			: BIT; 		//6  
		Reserve07		   			: BIT; 		//7 
		Reserve10		   			: BIT; 		//08  
		Reserve11		   			: BIT; 		//09  
		Reserve12		   			: BIT; 		//10  
		Reserve13		   			: BIT; 		//11  
		Reserve14		   			: BIT; 		//12  
		Reserve15		   			: BIT; 		//13  
		Reserve16		   			: BIT; 		//14  
		DisQuickStop	   			: BIT; 		//15   
	END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>